changes/4.1/76e018925406b2fd619babc1a9a9e25456017109
c6x: include: asm: dma-mapping: Add dummy dma_sync_single_range_for_device

c6x does not implement get_dma_ops() for dma-mapping-common.h. And in
dma-mapping-common.h, dma_sync_single_range_for_device() may be dummy.
So c6x can just define a dummy function for allmodconfig building.

    CC [M]  drivers/net/ethernet/micrel/ks8851.o
  drivers/net/ethernet/micrel/ks8842.c: In function 'ks8842_tx_frame_dma':
  drivers/net/ethernet/micrel/ks8842.c:453:2: error: implicit declaration of function 'dma_sync_single_range_for_device' [-Werror=implicit-function-declaration]
    dma_sync_single_range_for_device(adapter->dev,
    ^

Signed-off-by: Chen Gang <gang.chen.5i5j@gmail.com>
Signed-off-by: Mark Salter <msalter@redhat.com>

